--- a/.github/workflows/build-push-gcr.yaml
+++ b/.github/workflows/build-push-gcr.yaml
@@ -55,6 +55,7 @@ jobs:
           --min-instances 1            \
           --memory 512Mi               \
           --timeout 120                \
+          --verbosity                  \
           --image ${GCR_LOCATION}/${PROJECT_ID}/${IMAGE_NAME}:${GITHUB_SHA}
 
         if [[ $(gcloud run domain-mappings list --platform gke --cluster ${CLUSTER_NAME} --cluster-location ${REGION} --namespace ${NAMESPACE} --filter "DOMAIN=${DOMAIN_NAME}" | grep -v DOMAIN | wc -l) == 0 ]]; then
@@ -64,6 +65,7 @@ jobs:
             --cluster ${CLUSTER_NAME}       \
             --cluster-location ${REGION}    \
             --namespace ${NAMESPACE}        \
+            --verbosity                     \
             --domain ${DOMAIN_NAME}
         fi
 
