--- a/.github/workflows/build-push-gcr.yaml
+++ b/.github/workflows/build-push-gcr.yaml
@@ -44,10 +44,10 @@ jobs:
 
     - name: Deploy to Cloud Run
       run: |
-        echo "Set google project..."
+        echo "[INFO] Set google project..."
         gcloud config set project ${PROJECT_ID}
 
-        echo "Deploy service..."
+        echo "[INFO] Deploy service..."
         gcloud run deploy ${SERVICE}   \
           --platform gke               \
           --cluster ${CLUSTER_NAME}    \
@@ -60,7 +60,7 @@ jobs:
           --verbosity debug            \
           --image ${GCR_LOCATION}/${PROJECT_ID}/${IMAGE_NAME}:${GITHUB_SHA}
 
-        echo "Create domain mappings..."
+        echo "[INFO] Create domain mappings..."
         if [[ $(gcloud run domain-mappings list --platform gke --cluster ${CLUSTER_NAME} --cluster-location ${REGION} --namespace ${NAMESPACE} --filter "DOMAIN=${DOMAIN_NAME}" | grep -v DOMAIN | wc -l) == 0 ]]; then
           gcloud run domain-mappings create \
             --service ${SERVICE}            \
@@ -78,15 +78,18 @@ jobs:
         gcloud container clusters get-credentials ${CLUSTER_NAME} --region ${REGION} --project ${PROJECT_ID}
         kubectl version
         CURRENT_DOMAINS=$(kubectl -n gke-system get svc istio-ingress -o jsonpath="{.metadata.annotations['external-dns\.alpha\.kubernetes\.io/hostname']}")
+        ADD_DOMAIN=""
         IFS=', ' read -r -a CURRENT_DOMAINS_LIST <<< "${CURRENT_DOMAINS}"
         for domain in ${CURRENT_DOMAINS_LIST[@]}; do                                      \
-          echo "Checking if ${DOMAIN_NAME} exists in the existing Ingress annotation..."; \
+          echo "[INFO] Checking if ${DOMAIN_NAME} exists in the existing Ingress annotation..."; \
           if [[ "${domain}" == "${DOMAIN_NAME}" ]]; then                                  \
-            echo "${DOMAIN_NAME} is already set in ingress";                              \
+            echo "[INFO] ${domain} is already set in ingress";                              \
           else                                                                            \
-            echo "${DOMAIN_NAME} doesn't set in ingress";                                 \
+            echo "[INFO] ${domain} doesn't set in ingress. Add it...";                                 \
+            ADD_DOMAIN=${ADD_DOMAIN}",${domain}"
           fi; \
         done
+        echo "[ADDED] ${CURRENT_DOMAINS}${ADD_DOMAIN}"
 
     - name: Enable TLS-access
       run: |
