--- a/.github/workflows/build-push-gcr.yaml
+++ b/.github/workflows/build-push-gcr.yaml
@@ -77,19 +77,14 @@ jobs:
       run: |
         gcloud container clusters get-credentials ${CLUSTER_NAME} --region ${REGION} --project ${PROJECT_ID}
         kubectl version
-        CURRENT_DOMAINS=$(kubectl -n gke-system get svc istio-ingress -o jsonpath="{.metadata.annotations['external-dns\.alpha\.kubernetes\.io/hostname']}")
-        ADD_DOMAIN=""
-        IFS=', ' read -r -a CURRENT_DOMAINS_LIST <<< "${CURRENT_DOMAINS}"
-        for domain in ${CURRENT_DOMAINS_LIST[@]}; do                                      \
-          echo "[INFO] Checking if ${DOMAIN_NAME} exists in the existing Ingress annotation..."; \
-          if [[ "${domain}" == "${DOMAIN_NAME}" ]]; then                                  \
-            echo "[INFO] ${domain} is already set in ingress";                              \
-          else                                                                            \
-            echo "[INFO] ${domain} doesn't set in ingress. Add it...";                                 \
-            ADD_DOMAIN=${ADD_DOMAIN}",${domain}"
-          fi; \
-        done
-        echo "[ADDED] ${CURRENT_DOMAINS}${ADD_DOMAIN}"
+        echo "[INFO] Checking if [${DOMAIN_NAME}] is in the existing Ingress annotation..."
+        CURRENT_DOMAINS_LIST=$(kubectl -n gke-system get svc istio-ingress -o jsonpath="{.metadata.annotations['external-dns\.alpha\.kubernetes\.io/hostname']}")
+        if [[ $(echo ${CURRENT_DOMAINS_LIST} | grep -w "${DOMAIN_NAME}" | wc -c) -eq 0 ]]; then \
+          echo "[INFO] Domain [${DOMAIN_NAME}] is ABSENT in the domains list. Adding...";       \
+          echo "[INFO] ${CURRENT_DOMAINS_LIST},${DOMAIN_NAME}";                                 \
+        else
+          echo "[INFO] Domain [${DOMAIN_NAME}] is in the domains list. Leave untouched...";     \
+        fi
 
     - name: Enable TLS-access
       run: |
